@@ -6,12 +6,15 @@ import com.hailiang.langchain4jdemo.pojo.gitlab.CommitInfo;
 import com.hailiang.langchain4jdemo.pojo.gitlab.MergeRequestInfo;
 import com.hailiang.langchain4jdemo.pojo.gitlab.detail.DiffDetail;
 import com.hailiang.langchain4jdemo.remote.GitLabRemote;
+import dev.langchain4j.model.chat.ChatLanguageModel;
+import dev.langchain4j.model.openai.OpenAiChatModel;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static dev.langchain4j.data.document.loader.FileSystemDocumentLoader.loadDocument;
 
@@ -21,6 +24,9 @@ class GitRemoteTests {
     private GitLabRemote gitLabRemote;
     @Autowired
     private CodeReviewAgent codeReviewAgent;
+
+    @Autowired
+    private ChatLanguageModel model;
 
     @Test
     void TestGitLabRemoteCompare(){
@@ -76,7 +82,7 @@ class GitRemoteTests {
     @Test
     void TestGetCommitDifWithGpt(){
         List<DiffDetail> commitDiff = gitLabRemote.getCommitDiff(915, "d82f691cd75e4ffb452b106b4bf229f0c9e7243f");
-        List<String> codeList = commitDiff.stream().map(diffDetail -> diffDetail.getBeforeAndAfterDiff()).toList();
+        List<String> codeList = commitDiff.stream().map(diffDetail -> diffDetail.getBeforeAndAfterDiff()).collect(Collectors.toList());
         System.out.println(codeReviewAgent.codeReview(codeList));
     }
 
@@ -94,5 +100,47 @@ class GitRemoteTests {
     void TestErrorCode(){
         List<String> result = new ArrayList<>();
         System.out.println(result.get(1));
+    }
+
+
+    @Test
+    void TestLongToken(){
+        List<DiffDetail> diffs = gitLabRemote.getCommitDiff(553, "40bdab89a1c45d6c41f1101954b541cb828dd68b");
+        StringBuilder diffString = new StringBuilder();
+        diffs = diffs.stream().limit(20).skip(15).collect(Collectors.toList());
+        for (DiffDetail diffDetail : diffs) {
+            diffString.append(diffDetail.getDiffAndCodeName());
+            diffString.append("\n");
+        }
+        OpenAiChatModel aiChatModel = (OpenAiChatModel) model;
+        int i = aiChatModel.estimateTokenCount(diffString.toString());
+
+        System.out.println(i);
+    }
+
+
+    @Test
+    void TestNewPrompt(){
+        //List<DiffDetail> diffs = gitLabRemote.getCommitDiff(553, "c03920553e4b8083fdebc739f5d1e38b6b1bb212");
+        List<DiffDetail> diffs = gitLabRemote.getCommitDiff(915, "58cca668d1f6c99dd9ee62f234ffda4b378bf9fa");
+        List<String> codeList = diffs.stream().map(diffDetail -> diffDetail.getBeforeAndAfterDiff()).collect(Collectors.toList());
+        System.out.println(codeList);
+        System.out.println(diffs.size());
+        System.out.println("开始代码审查");
+        System.out.println(codeReviewAgent.codeReview(codeList));
+    }
+
+    @Test
+    void TestNewFunction(List<String> inputs){
+        for (String input : inputs) {
+            System.out.println(input);
+        }
+    }
+
+    @Test
+    void TestInput(List<String> inputs){
+        for (String input : inputs) {
+            System.out.println(input);
+        }
     }
 }
